--- a/rpc-qe-jobs/onmetal-all-in-one/deploy-rpc.yml
+++ b/rpc-qe-jobs/onmetal-all-in-one/deploy-rpc.yml
@@ -111,36 +111,44 @@
     build-discarder:
         days-to-keep: 30
     concurrent: true
+    parameters:
         - label:
             name: NODE
             description: Name of Jenkins node to run on
+        - string:
+            name: JENKINS_OA_REPO
+            default: https://github.com/rcbops-qe/jenkins-oa
+        - string:
+            name: JENKINS_OA_BRANCH
+            default: master
+    scm:
+        - jenkins-oa-scm
     wrappers:
         - mask-passwords
         - ansicolor:
             colormap: xterm
     builders:
-        - builder:
-            name: onmetal-aio-deploy-maas
-            builders:
-                - shell: |
-                    #!/bin/bash
+        - shell: |
+            #!/bin/bash
+            HOSTNAME=$(hostname)
+            ansible-playbook --extra-vars "server_name=$HOSTNAME" maas-entities.yml
 
-                    # create maas entities with ansible?
+            set +x
+            ADMIN_PWD=$(sudo grep keystone_auth_admin_password /etc/openstack_deploy/user_osa_secrets.yml  | awk '{print $2}')
 
-                    set +x
-                    /etc/openstack_deploy/user_rpco_variables_overrides.yml
+            /etc/openstack_deploy/user_rpco_variables_overrides.yml
+            echo "
+            rackspace_cloud_username: $OS_USERNAME
+            rackspace_cloud_api_key: $OS_API_KEY
+            rackspace_cloud_tenant_id: $OS_TENANT_NAME
+            maas_notification_plan: npgvyFuPML
 
-                    rackspace_cloud_username:
-                    rackspace_cloud_api_key:
-                    rackspace_cloud_tenant_id: 863035
-                    maas_notification_plan: npgvyFuPML
+            keystone_service_adminurl: http://172.29.236.200:5000/v3
+            keystone_admin_user_name: admin
+            keystone_admin_tenant_name: admin
+            keystone_auth_admin_password: $ADMIN_PWD
 
-                    keystone_service_adminurl: http://172.29.236.200:5000/v3
-                    keystone_admin_user_name: admin
-                    keystone_admin_tenant_name: admin
-                    keystone_auth_admin_password:
+            maas_fqdn_extension: .$HOSTNAME" >> /etc/openstack_deploy/user_rpco_variables_overrides.yml
 
-                    maas_fqdn_extension:
-
-
-                    cd /opt/rpc-openstack/rpcd/playbooks && openstack-ansible setup-maas.yml
+            set -x
+            cd /opt/rpc-openstack/rpcd/playbooks && openstack-ansible setup-maas.yml
