Marking pipeline as unstable for test failures

--- a/rpc-qe-jobs/onmetal-all-in-one/cleanup.yml
+++ b/rpc-qe-jobs/onmetal-all-in-one/cleanup.yml
@@ -29,6 +29,8 @@
             wipe-workspace: false
     wrappers:
         - mask-passwords
+        - ansicolor:
+            colormap: xterm
     builders:
         - shining-panda:
             build-environment: virtualenv
