--- a/rpc-qe-jobs/kibana-tests.yml
+++ b/rpc-qe-jobs/kibana-tests.yml
@@ -6,12 +6,6 @@
     parameters:
         - node:
             name: Environment
-    scm:
-        - git:
-            url: https://github.com/rcbops-qe/kibana-selenium.git
-            branches:
-                - master
-            skip-tag: true
     builders:
         - shell: |
             #!/bin/bash -x
@@ -22,9 +16,17 @@
             virtualenv kib-sel-venv
             . kib-sel-venv/bin/activate
 
+            #Pull from github the code and setup the required pip packages.
+            sudo rm -rf /opt/kibana-selenium
+            cd /opt
+            sudo git clone https://github.com/rcbops-qe/kibana-selenium.git
+            sudo chmod 777 kibana-selenium
+            cd kibana-selenium
+            #mv ~/.pip/pip.conf ~/.pip/pip2.conf
             pip install -r requirements.txt
+            #mv ~/.pip/pip2.conf ~/.pip/pip.conf
             export PYTHONPATH=$(pwd)
-            python conf-gen.py
+            sudo python conf-gen.py
 
             #Execute the tests
-            python testrepo/kibana/kibana.py
+            python /opt/kibana-selenium/testrepo/kibana/kibana.py
